--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -68,7 +68,7 @@
         <div class="row">
 
             <div class="footer-copyright ml-auto mr-auto">© 2019 Copyright:
-                <a href="https://github.com/OussemaBenAbdallah/PFA">
+                <a href="https://github.com/OussemaBenAbdallah/conference-app-2019" target="_blank">
                     Oussama Ben Abdallah - Firas Tayeb -- ENSIT
                 </a>
                 <img height="32px" width="32px" src="../assets/github.png" class="ml-2 mb-2" alt="github repository">
